fix(ui): a11y contrast-ratio

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -20,7 +20,7 @@
 	--text-color-link-active: #0033bb;
 	--text-color-link-active: #ef476f;
 	--text-color-link-hover: #0a31fd;
-	--text-color-time: #6b7280;
+	--text-color-time: #686f7d;
 
 	--nav-link-color: #0a31fd;
 	--nav-hover-link-color: #ef476f;
